# touch-deck

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
apps/configurator/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
apps/configurator/src/: App.css  App.tsx  Loader.tsx  api.ts  index.css  main.tsx  store.ts
apps/configurator/src/components/: AppSidebar.tsx  Deck.tsx  DeckGrid.tsx  DeckPage.tsx  DeckPageButton.tsx  DeckPageCell.tsx  Editor.tsx  ErrorDialog.tsx  Footer.tsx  Instance.ts  Settings.tsx  Sidebar.tsx
apps/configurator/src/components/Deck/: Deck.tsx  DeckCell.tsx  DeckGrid.tsx
apps/configurator/src/components/DeckEditor/: DeckEditor.tsx  DeckEditorItem.tsx  DeckEditorItemDialogContent.tsx  DeckEditorItemForm.tsx  DeckEditorItemSelector.tsx  DeckEditorItemType.tsx  DeckSettings.tsx  DeckSettingsTest.tsx
apps/configurator/src/components/DeckEditor/ItemForm/: IconPicker.tsx  ItemForm.txt  StreamerbotActionForm.tsx  StreamerbotConnectionEdit.tsx  StreamerbotSwitchForm.tsx  StreamerbotSwitchForm.txt
apps/configurator/src/components/QRCode/: QRCode.tsx
apps/configurator/src/components/Settings/: ConnectionStatus.tsx  Pages.tsx  Settings.tsx  SettingsForm.tsx
apps/configurator/src/components/Toolbar/: ConnectionStatus.tsx  Pages.tsx  SettingsForm.tsx  Toolbar.tsx
apps/configurator/src/components/ui/: dialog.tsx  sidebar.tsx
apps/configurator/src/context/: AppContext.tsx  DeckContext.tsx  SettingsContext.tsx  StreamerbotContext.tsx
apps/configurator/src/hooks/: tauri.ts  useStreamerbotClient.ts
apps/configurator/src/mutations/: action.ts  board.ts  deck.ts  profile.ts  settings.ts
apps/configurator/src/queries/: actions.ts  board.ts  deck.ts  page.ts  plugins.ts  profile.ts  settings.ts
apps/configurator/src/store/: app.ts
apps/configurator/src/streamerbot/: StreamerbotContext.tsx  streamerbot-context.tsx  use-streamerbot-client.ts  useStreamerbotClient.ts
apps/configurator/src/types/: deck.ts  settings.ts
apps/deck/: index.html  package.json  vite.config.ts
apps/deck/src/: App.tsx  DeckPageButton.tsx  index.css  main.tsx
apps/deck/src/components/: Deck.tsx  DeckCell.tsx  DeckItem.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/action-manager/: package.json  rename.js
src-tauri/action-manager/src/: index.ts  plugin-manager.ts
src-tauri/capabilities/: default.json  desktop.json
src-tauri/crates/database/: .env.example  Cargo.toml
src-tauri/crates/database/migrations/2026-01-02-152221-0000_init/: up.sql
src-tauri/crates/database/src/: error.rs  lib.rs  models.rs  schema.rs  seed.rs
src-tauri/crates/server/: Cargo.toml
src-tauri/crates/server/src/: lib.rs  message.rs  socket.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20251114125457_init.down.sql  20251114125457_init.up.sql
src-tauri/migrations/2026-01-02-152221-0000_init/: down.sql  up.sql
src-tauri/plugin-manager/: package.json  rename.js  tsconfig.json
src-tauri/plugin-manager/src/: index.ts  plugin-manager.ts  types.ts
src-tauri/plugins/helloworld/: index.js  manifest.json
src-tauri/plugins/streamer.bot/: index.js  manifest.json  package.json
src-tauri/src/: app.rs  commands.rs  database.rs  get_ip.rs  lib.rs  main.rs  models.rs  plugin_loader.rs  settings.rs  state.rs  tray.rs  websocket.rs
src-tauri/src/commands/: dto.rs  error.rs  mod.rs  repository.rs
src-tauri/src/database/: error.rs  mod.rs  models.rs  schema.rs  seed.rs
src-tauri/src/websocket/: client.rs  server.rs
