[package]
name = "touch_deck"
version = "0.1.0"
description = "Stream Deck Killer"
authors = ["MikeRime"]
edition = "2024"

[lib]
name = "touch_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6.2", features = ["fs"] }
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
futures = "0.3.31"
tokio-tungstenite = "0.28.0"
local-ip-address = "0.6.5"
thiserror = "2.0.12"
tauri-plugin-shell = "2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
dotenvy = "0.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
