[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database/" }
axum = "0.8.8"
futures = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = "1.49.0"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"
diesel = "2.3.5"
